# VAE_project

./: .#.gitignore  .gitignore  README.md  pyproject.toml
code_of_paper/: experiment.py  vae_experiment_log.txt
code_of_paper/models/: HVAE_2level.py  Model.py  PixelHVAE_2level.py  VAE.py  convHVAE_2level.py
code_of_paper/snapshots/2020-12-20 21:17:06_freyfaces_vae_vampprior(K_500)_wu(100)_z1_40_z2_40/: vae.config
code_of_paper/snapshots/2020-12-20 21:19:31_freyfaces_vae_vampprior(K_500)_wu(100)_z1_40_z2_40/: vae.config
code_of_paper/utils/: distributions.py  evaluation.py  load_data.py  nn.py  optimizer.py  perform_experiment.py  training.py  visual_evaluation.py
our_code/: MNIST.py  README.md  VAE.py  adam_optimizer_original.py  analytics.ipynb  configs.py  distribution_helpers.py  eval_generate.py  freyfaces.py  main.py  nn_utils.py  output  plot_loss.py  pseudos_plot.py  read_data.py  requirements.txt  vae_experiment_MNIST.py  vae_experiment_freyfaces.py
our_code/experiments_weights_from_training/freyfaces/mog/: log  log.json
our_code/plots/: lossvalues_test.json  lossvalues_train.json
short_vae/: eval_generate.py  experiments.py  mnist.py  model.py
src/: README.md  VAE.py  configs.py  eval_generate.py  plot.py  plot_loss.py  read_data.py  requirements.txt
src/plots/: freyfaces_mog__lossvalues_test.json  freyfaces_mog_lossvalues_test_per_epoch.json  static_mnist_mog__lossvalues_test.json  static_mnist_mog_lossvalues_test.json  static_mnist_mog_lossvalues_test_per_epoch.json  static_mnist_mog_lossvalues_train.json
vae/: VAE.py  model.py
(+15 files in other folders)
