[tool.poetry]
name = "vae_project"
version = "0.1.0"
description = ""
authors = ["erikdao <cuong@neuraltalks.io>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.1"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
pandas = "^1.2.0"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
